force-app/main/default/objects/RetailOpportunity__c/RetailOpportunity__c.object-meta.xml
<CustomObject>
    <description>ソコリテの来店客との商談を管理するオブジェクト</description>
    <label>リテール商談</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>リテール商談No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>