force-app/main/default/objects/RetailOpportunity__c/fields/assessment_date__c.field-meta.xml
<CustomField>
    <fullName>assessment_date__c</fullName>
    <label>査定日</label>
    <type>Date</type>
</CustomField>