force-app/main/default/objects/RetailOpportunity__c/fields/assessment_user__c.field-meta.xml
<CustomField>
    <fullName>assessment_user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>査定担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>retail_opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>