force-app/main/default/objects/RetailOpportunity__c/fields/back_order__c.field-meta.xml
<CustomField>
    <fullName>back_order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>バックオーダー</label>
    <type>Checkbox</type>
</CustomField>