force-app/main/default/objects/RetailOpportunity__c/fields/bug_content__c.field-meta.xml
<CustomField>
    <fullName>bug_content__c</fullName>
    <label>売却希望_不具合内容</label>
    <length>50</length>
    <type>Text</type>
</CustomField>