force-app/main/default/objects/RetailOpportunity__c/fields/campaign_gift_sending_date__c.field-meta.xml
<CustomField>
    <fullName>campaign_gift_sending_date__c</fullName>
    <label>キャンペーンギフト送信日</label>
    <type>Date</type>
</CustomField>