force-app/main/default/objects/RetailOpportunity__c/fields/campaign_target__c.field-meta.xml
<CustomField>
    <fullName>campaign_target__c</fullName>
    <label>買取キャンペーン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>キャンペーン対象</fullName>
            </value>
            <value>
                <fullName>非対象</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>