force-app/main/default/objects/RetailOpportunity__c/fields/car_num__c.field-meta.xml
<CustomField>
    <fullName>car_num__c</fullName>
    <label>売却希望_車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>