force-app/main/default/objects/RetailOpportunity__c/fields/competitor__c.field-meta.xml
<CustomField>
    <fullName>competitor__c</fullName>
    <label>商談競合先</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ガリバー</fullName>
            </value>
            <value>
                <fullName>ビッグモーター</fullName>
            </value>
            <value>
                <fullName>カーセブン</fullName>
            </value>
            <value>
                <fullName>ラビット</fullName>
            </value>
            <value>
                <fullName>カーチス</fullName>
            </value>
            <value>
                <fullName>ユーポス</fullName>
            </value>
            <value>
                <fullName>ネクステージ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>