force-app/main/default/objects/RetailOpportunity__c/fields/consideration_period__c.field-meta.xml
<CustomField>
    <fullName>consideration_period__c</fullName>
    <label>検討時期</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>すぐにでも</fullName>
            </value>
            <value>
                <fullName>1週間以内</fullName>
            </value>
            <value>
                <fullName>1か月以内</fullName>
            </value>
            <value>
                <fullName>3か月以内</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>