force-app/main/default/objects/RetailOpportunity__c/fields/contract_conditions__c.field-meta.xml
<CustomField>
    <fullName>contract_conditions__c</fullName>
    <label>契約条件</label>
    <type>TextArea</type>
</CustomField>