force-app/main/default/objects/RetailOpportunity__c/fields/customer__c.field-meta.xml
<CustomField>
    <fullName>customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個人取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>customer</relationshipName>
    <type>Lookup</type>
</CustomField>