force-app/main/default/objects/RetailOpportunity__c/fields/customer_name_display__c.field-meta.xml
<CustomField>
    <fullName>customer_name_display__c</fullName>
    <formula>customer__r.LastName &amp; &quot; &quot; &amp; customer__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>お客様名</label>
    <type>Text</type>
</CustomField>