force-app/main/default/objects/RetailOpportunity__c/fields/decision_date_purchase__c.field-meta.xml
<CustomField>
    <fullName>decision_date_purchase__c</fullName>
    <description>買取が成約or不成約になった日付がフローで入力される</description>
    <label>商談決定日(買取)</label>
    <type>Date</type>
</CustomField>