force-app/main/default/objects/RetailOpportunity__c/fields/decision_date_sales__c.field-meta.xml
<CustomField>
    <fullName>decision_date_sales__c</fullName>
    <description>販売が成約or不成約になった日付がフローで入力される</description>
    <label>商談決定日(販売)</label>
    <type>Date</type>
</CustomField>