force-app/main/default/objects/RetailOpportunity__c/fields/decision_maker__c.field-meta.xml
<CustomField>
    <fullName>decision_maker__c</fullName>
    <label>決定権者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本人</fullName>
            </value>
            <value>
                <fullName>配偶者</fullName>
            </value>
            <value>
                <fullName>親・家族</fullName>
            </value>
            <value>
                <fullName>法人担当者</fullName>
            </value>
            <value>
                <fullName>友人・知人</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>