force-app/main/default/objects/RetailOpportunity__c/fields/desired_body_type__c.field-meta.xml
<CustomField>
    <fullName>desired_body_type__c</fullName>
    <label>購入希望_ボディ形状</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>セダン</fullName>
            </value>
            <value>
                <fullName>ミニバン</fullName>
            </value>
            <value>
                <fullName>軽自動車</fullName>
            </value>
            <value>
                <fullName>コンパクトカー</fullName>
            </value>
            <value>
                <fullName>スポーツ・クーペ</fullName>
            </value>
            <value>
                <fullName>ワゴン</fullName>
            </value>
            <value>
                <fullName>ワンボックス・バン</fullName>
            </value>
            <value>
                <fullName>まだ決まっていない</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>