force-app/main/default/objects/RetailOpportunity__c/fields/desired_body_type_other_del__c.field-meta.xml
<CustomField>
    <fullName>desired_body_type_other_del__c</fullName>
    <label>購入希望_ボディ形状(その他)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>