force-app/main/default/objects/RetailOpportunity__c/fields/desired_budget__c.field-meta.xml
<CustomField>
    <fullName>desired_budget__c</fullName>
    <label>購入希望_予算</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>～30万円</fullName>
            </value>
            <value>
                <fullName>～50万円</fullName>
            </value>
            <value>
                <fullName>～100万円</fullName>
            </value>
            <value>
                <fullName>～150万円</fullName>
            </value>
            <value>
                <fullName>～200万円</fullName>
            </value>
            <value>
                <fullName>～300万円</fullName>
            </value>
            <value>
                <fullName>500万円以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>