force-app/main/default/objects/RetailOpportunity__c/fields/desired_car_model__c.field-meta.xml
<CustomField>
    <fullName>desired_car_model__c</fullName>
    <label>購入希望_車種</label>
    <length>50</length>
    <type>Text</type>
</CustomField>