force-app/main/default/objects/RetailOpportunity__c/fields/desired_car_model_year__c.field-meta.xml
<CustomField>
    <fullName>desired_car_model_year__c</fullName>
    <label>購入希望_年式</label>
    <length>50</length>
    <type>Text</type>
</CustomField>