force-app/main/default/objects/RetailOpportunity__c/fields/desired_maker__c.field-meta.xml
<CustomField>
    <fullName>desired_maker__c</fullName>
    <label>購入希望_メーカ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>トヨタ</fullName>
            </value>
            <value>
                <fullName>レクサス</fullName>
            </value>
            <value>
                <fullName>ホンダ</fullName>
            </value>
            <value>
                <fullName>日産</fullName>
            </value>
            <value>
                <fullName>マツダ</fullName>
            </value>
            <value>
                <fullName>スバル</fullName>
            </value>
            <value>
                <fullName>スズキ</fullName>
            </value>
            <value>
                <fullName>三菱</fullName>
            </value>
            <value>
                <fullName>ダイハツ</fullName>
            </value>
            <value>
                <fullName>いすゞ</fullName>
            </value>
            <value>
                <fullName>日野自動車</fullName>
            </value>
            <value>
                <fullName>メルセデスベンツ</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>アウディ</fullName>
            </value>
            <value>
                <fullName>フォルクスワーゲン</fullName>
            </value>
            <value>
                <fullName>ジープ</fullName>
            </value>
            <value>
                <fullName>ランドローバー</fullName>
            </value>
            <value>
                <fullName>ボルボ</fullName>
            </value>
            <value>
                <fullName>ヒョンデ</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>