force-app/main/default/objects/RetailOpportunity__c/fields/desired_memo__c.field-meta.xml
<CustomField>
    <fullName>desired_memo__c</fullName>
    <description>ソコカラスタッフ入力用</description>
    <label>購入希望__メモ</label>
    <type>TextArea</type>
</CustomField>