force-app/main/default/objects/RetailOpportunity__c/fields/desired_payment_method__c.field-meta.xml
<CustomField>
    <fullName>desired_payment_method__c</fullName>
    <label>購入希望_支払方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>現金</fullName>
            </value>
            <value>
                <fullName>ローン</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>クレジット</fullName>
                <isActive>false</isActive>
                <label>クレジット</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>