force-app/main/default/objects/RetailOpportunity__c/fields/desired_payment_method_other__c.field-meta.xml
<CustomField>
    <fullName>desired_payment_method_other__c</fullName>
    <label>購入希望_支払方法(その他)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>