force-app/main/default/objects/RetailOpportunity__c/fields/desired_sales_amount__c.field-meta.xml
<CustomField>
    <fullName>desired_sales_amount__c</fullName>
    <label>売却希望金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>