force-app/main/default/objects/RetailOpportunity__c/fields/error_display_flg__c.field-meta.xml
<CustomField>
    <fullName>error_display_flg__c</fullName>
    <description>2026/1/20 リユース引継ぎ時のキャンセル時のエラー表示に使用</description>
    <label>【要削除】エラー表示フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>クローズ理由要入力</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>