force-app/main/default/objects/RetailOpportunity__c/fields/flg_completed__c.field-meta.xml
<CustomField>
    <fullName>flg_completed__c</fullName>
    <formula>CASE( opportunity_type__c ,
&quot;買取のみ&quot;, CASE(phase_for_purchase__c, &quot;完了&quot;, 1, &quot;不成約&quot;, 1, 0), 
&quot;販売のみ&quot;, CASE( phase_for_sell__c , &quot;完了&quot;, 1, &quot;不成約&quot;, 1, 0),
&quot;買取・販売&quot;,CASE(phase_for_purchase__c, &quot;完了&quot;, 1, &quot;不成約&quot;, 1, 0)*CASE( phase_for_sell__c , &quot;完了&quot;, 1, &quot;不成約&quot;, 1, 0),
&quot;その他&quot;, CASE( phase_for_other__c , &quot;完了&quot;, 1, &quot;中止&quot;, 1, 0),
0) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談終了フラグ</label>
    <type>Checkbox</type>
</CustomField>