force-app/main/default/objects/RetailOpportunity__c/fields/inflow_media_list__c.field-meta.xml
<CustomField>
    <fullName>inflow_media_list__c</fullName>
    <label>媒体</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>opportunity_method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>カーセンサー</fullName>
            </value>
            <value>
                <fullName>グーネット</fullName>
            </value>
            <value>
                <fullName>GoogleMap</fullName>
            </value>
            <value>
                <fullName>オートサーバー</fullName>
            </value>
            <value>
                <fullName>オークネット</fullName>
            </value>
            <value>
                <fullName>クイッククイック</fullName>
            </value>
            <value>
                <fullName>リユース</fullName>
            </value>
            <value>
                <fullName>テレビCM</fullName>
            </value>
            <value>
                <fullName>ラジオCM</fullName>
            </value>
            <value>
                <fullName>新聞・雑誌</fullName>
            </value>
            <value>
                <fullName>ソコカラWebサイト</fullName>
            </value>
            <value>
                <fullName>看板を見て</fullName>
            </value>
            <value>
                <fullName>イベント</fullName>
            </value>
            <value>
                <fullName>SNS</fullName>
            </value>
            <value>
                <fullName>動画広告</fullName>
            </value>
            <value>
                <fullName>Youtube公式チャンネル</fullName>
            </value>
            <value>
                <fullName>知人からの紹介</fullName>
            </value>
            <value>
                <fullName>社内福利厚生</fullName>
            </value>
            <value>
                <fullName>社員紹介(取引先)</fullName>
            </value>
            <value>
                <fullName>社員紹介(家族・友人・知人)</fullName>
            </value>
            <value>
                <fullName>顧客紹介</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>