force-app/main/default/objects/RetailOpportunity__c/fields/inflow_media_other__c.field-meta.xml
<CustomField>
    <fullName>inflow_media_other__c</fullName>
    <label>媒体(その他)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>