force-app/main/default/objects/RetailOpportunity__c/fields/inflow_route__c.field-meta.xml
<CustomField>
    <fullName>inflow_route__c</fullName>
    <label>発生経路</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>店舗</fullName>
            </value>
            <value>
                <fullName>店舗以外</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>