force-app/main/default/objects/RetailOpportunity__c/fields/inflow_source__c.field-meta.xml
<CustomField>
    <fullName>inflow_source__c</fullName>
    <label>流入元(旧)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>直来店</fullName>
            </value>
            <value>
                <fullName>リユース</fullName>
            </value>
            <value>
                <fullName>カーセンサー</fullName>
            </value>
            <value>
                <fullName>グーネット</fullName>
            </value>
            <value>
                <fullName>業販</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>