force-app/main/default/objects/RetailOpportunity__c/fields/is_repeater__c.field-meta.xml
<CustomField>
    <fullName>is_repeater__c</fullName>
    <formula>IF(reuse_flg__c, 
PurchaseReception__r.repeaterDecision__c ,
IF(ABS((CreatedDate - customer__r.CreatedDate)*1440) &lt; 1, &quot;&quot;, &quot;以前に取引先登録あり&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>リユース引継ぎ案件の場合は、買取受付の「リピーター判断」を表示
通常の場合は、取引先とリテール商談の作成日時に1分以上の差がある場合&quot;以前に取引先登録あり&quot;と表示しています。</inlineHelpText>
    <label>過去取引判断</label>
    <type>Text</type>
</CustomField>