force-app/main/default/objects/RetailOpportunity__c/fields/mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>mobile_phone__c</fullName>
    <description>買取商談に携帯電話が反映されるようになれば不要。
削除後、マーケ北口さんが確認しているレポートで項目の差し替えが必要。山本</description>
    <formula>customer__r.MobilePhone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>携帯電話</label>
    <type>Text</type>
</CustomField>