force-app/main/default/objects/RetailOpportunity__c/fields/ModelYearPickList__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList__c</fullName>
    <label>売却希望_年式</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Model_Year</valueSetName>
    </valueSet>
</CustomField>