force-app/main/default/objects/RetailOpportunity__c/fields/Mst_Makers__c.field-meta.xml
<CustomField>
    <fullName>Mst_Makers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売却希望_メーカ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Mst_Makers__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>リテール商談</relationshipLabel>
    <relationshipName>RetailOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>