force-app/main/default/objects/RetailOpportunity__c/fields/Mst_Models__c.field-meta.xml
<CustomField>
    <fullName>Mst_Models__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売却希望_車種</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Mst_Makers__c</field>
            <operation>equals</operation>
            <valueField>Mst_Models__c.maker__c</valueField>
        </filterItems>
        <filterItems>
            <field>Mst_Models__c.disp_flg__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>リテール商談</relationshipLabel>
    <relationshipName>RetailOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>