force-app/main/default/objects/RetailOpportunity__c/fields/Mst_Types__c.field-meta.xml
<CustomField>
    <fullName>Mst_Types__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>売却希望_型式</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Mst_Models__c</field>
            <operation>equals</operation>
            <valueField>Mst_Types__c.model__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Types__c</referenceTo>
    <relationshipName>RetailOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>