force-app/main/default/objects/RetailOpportunity__c/fields/next_action_date__c.field-meta.xml
<CustomField>
    <fullName>next_action_date__c</fullName>
    <label>次回アクション日</label>
    <type>Date</type>
</CustomField>