force-app/main/default/objects/RetailOpportunity__c/fields/offered_purchase_price__c.field-meta.xml
<CustomField>
    <fullName>offered_purchase_price__c</fullName>
    <label>買取提示金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>