force-app/main/default/objects/RetailOpportunity__c/fields/opportunity_history__c.field-meta.xml
<CustomField>
    <fullName>opportunity_history__c</fullName>
    <label>経緯内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>