force-app/main/default/objects/RetailOpportunity__c/fields/opportunity_method__c.field-meta.xml
<CustomField>
    <fullName>opportunity_method__c</fullName>
    <label>商談方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>直来店</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>出張査定</fullName>
            </value>
            <value>
                <fullName>来店査定</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>