force-app/main/default/objects/RetailOpportunity__c/fields/opportunity_type__c.field-meta.xml
<CustomField>
    <fullName>opportunity_type__c</fullName>
    <label>商談内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>買取のみ</fullName>
            </value>
            <value>
                <fullName>販売のみ</fullName>
            </value>
            <value>
                <fullName>買取・販売</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>