force-app/main/default/objects/RetailOpportunity__c/fields/other_assessment_status__c.field-meta.xml
<CustomField>
    <fullName>other_assessment_status__c</fullName>
    <label>他社査定状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>相見積もりはしていない</fullName>
            </value>
            <value>
                <fullName>1社 相見積もり中</fullName>
            </value>
            <value>
                <fullName>2社 相見積もり中</fullName>
            </value>
            <value>
                <fullName>3社以上 相見積もり中</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>