force-app/main/default/objects/RetailOpportunity__c/fields/owner_queue_check__c.field-meta.xml
<CustomField>
    <fullName>owner_queue_check__c</fullName>
    <description>所有者ユーザがNullの場合はTrue(未対応キューのままになっている)</description>
    <formula>ISBLANK( Owner:User.Id )</formula>
    <label>所有者キューチェック</label>
    <type>Checkbox</type>
</CustomField>