force-app/main/default/objects/RetailOpportunity__c/fields/phase_for_other__c.field-meta.xml
<CustomField>
    <fullName>phase_for_other__c</fullName>
    <label>その他フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応</fullName>
                <default>true</default>
                <label>未対応</label>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>中止</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>