force-app/main/default/objects/RetailOpportunity__c/fields/phase_for_purchase__c.field-meta.xml
<CustomField>
    <fullName>phase_for_purchase__c</fullName>
    <label>買取フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応</fullName>
                <default>true</default>
                <label>未対応</label>
            </value>
            <value>
                <fullName>商談中</fullName>
            </value>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>不成約</fullName>
            </value>
            <value>
                <fullName>キャンセル</fullName>
                <isActive>false</isActive>
                <label>キャンセル</label>
            </value>
            <value>
                <fullName>全完了</fullName>
                <isActive>false</isActive>
                <label>全完了</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>