force-app/main/default/objects/RetailOpportunity__c/fields/phase_for_sell__c.field-meta.xml
<CustomField>
    <fullName>phase_for_sell__c</fullName>
    <label>販売フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応</fullName>
                <default>true</default>
                <label>未対応</label>
            </value>
            <value>
                <fullName>商談中</fullName>
            </value>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>不成約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>