force-app/main/default/objects/RetailOpportunity__c/fields/probability__c.field-meta.xml
<CustomField>
    <fullName>probability__c</fullName>
    <label>成約確度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S(条件合意済み)</fullName>
            </value>
            <value>
                <fullName>A(最終検討中)</fullName>
            </value>
            <value>
                <fullName>B(他社と相見積もり中・車種検討中)</fullName>
            </value>
            <value>
                <fullName>C(相場把握・見学)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>