force-app/main/default/objects/RetailOpportunity__c/fields/proposed_car_model__c.field-meta.xml
<CustomField>
    <fullName>proposed_car_model__c</fullName>
    <label>販売提案車種</label>
    <length>50</length>
    <type>Text</type>
</CustomField>