force-app/main/default/objects/RetailOpportunity__c/fields/purchase_reason__c.field-meta.xml
<CustomField>
    <fullName>purchase_reason__c</fullName>
    <label>購入検討理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>古くなったから</fullName>
            </value>
            <value>
                <fullName>故障・事故により乗り換えたい</fullName>
            </value>
            <value>
                <fullName>環境・家族構成の変化</fullName>
            </value>
            <value>
                <fullName>店舗に気になる車がある</fullName>
            </value>
            <value>
                <fullName>欲しい車がある</fullName>
            </value>
            <value>
                <fullName>車検の時期</fullName>
            </value>
            <value>
                <fullName>今の車に不満がある（燃費・安全性能など）</fullName>
            </value>
            <value>
                <fullName>車が必要になった</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>