force-app/main/default/objects/RetailOpportunity__c/fields/purchase_reason_other__c.field-meta.xml
<CustomField>
    <fullName>purchase_reason_other__c</fullName>
    <label>購入検討理由(その他)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>