force-app/main/default/objects/RetailOpportunity__c/fields/purchase_status__c.field-meta.xml
<CustomField>
    <fullName>purchase_status__c</fullName>
    <label>購入検討状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>買いたい車が決まっていない</fullName>
            </value>
            <value>
                <fullName>買いたい車の車種が決まっている</fullName>
            </value>
            <value>
                <fullName>店頭に買いたい車がある</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>