force-app/main/default/objects/RetailOpportunity__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>小売商談で買取成約した車輌の買取商談レコード</description>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>リテール商談(買取)</relationshipLabel>
    <relationshipName>RetailOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>