force-app/main/default/objects/RetailOpportunity__c/fields/PurchaseReception__c.field-meta.xml
<CustomField>
    <fullName>PurchaseReception__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取受付</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipName>RetailOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>